landing page updated

--- a/index.html
+++ b/index.html
@@ -26,14 +26,8 @@
                         <span>📚</span>
                         Library
                     </div>
-                    <div class="menu-item">
-                        <span>🌟</span>
-                        Sora
-                    </div>
-                    <div class="menu-item">
-                        <span>🤖</span>
-                        GPTs
-                    </div>
+                   
+                    
                 </div>
                 <div class="chats-section">
                     <div class="chats-header">Chats</div>
@@ -58,7 +52,7 @@
                     MOSDAC Assistant
                 </div>
                 <div class="header-actions">
-                    <button class="header-btn">Get Plus</button>
+                    <button class="header-btn">Login</button>
                 </div>
             </div>
             <div class="chat-container" id="chatContainer">
@@ -90,7 +84,7 @@
                         <textarea 
                             class="message-input" 
                             id="messageInput"
-                            placeholder="Ask anything about weather, climate, or satellite data..."
+                            placeholder="Ask anything about weather, climate, or satellite data... (Powered by Gemini)"
                             rows="1"
                             onkeypress="handleKeyPress(event)"
                             oninput="adjustTextareaHeight()"
@@ -112,6 +106,9 @@
             </div>
         </div>
     </div>
+    <footer style="width:100%;text-align:center;padding:16px 0;background:#b64848;color:#b4b4b4;font-size:14px;letter-spacing:1px;">
+        Powered by Gemini
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
