--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
             <p>Revolutionary chatbot powered by ISRO's Meteorological & Oceanographic Satellite Data Archive Centre. Get real-time satellite data, weather information, and oceanographic insights through intelligent conversations.</p>
             <div class="hero-buttons">
                 <a href="#features" class="cta-button">Explore Features</a>
-                <a href="chatbot.html" class="cta-button secondary">Try Chatbot</a>
+                <a href="mosdac_landing.html" class="cta-button secondary">Try Chatbot</a>
             </div>
         </div>
     </section>
